Home Page completed

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer class="footer text-center py-4 bg-dark">
+<p class="text-light">&copy; 2024 Abdul Moiz Raza Bhutta</p>
+<div class="social-links">
+    <a [href]="socialLinks.linkedin" target="_blank" class="mx-2">
+    <i class="fab fa-linkedin"></i>
+    </a>
+    <a [href]="socialLinks.github" target="_blank" class="mx-2">
+    <i class="fab fa-github"></i>
+    </a>
+    
+</div>
+</footer>
