--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,17 @@
-<p>about works!</p>
+<section class="about my-5">
+<div class="row">
+    <div class="col-md-6">
+    <h2>About Me</h2>
+    <p>{{personalInfo.description}}</p>
+    </div>
+    <div class="col-md-6">
+    <h2>Details</h2>
+    <ul class="list-unstyled">
+        <li><strong>Age:</strong> {{ personalInfo.age }}</li>
+        <li><strong>Email:</strong> {{ personalInfo.email }}</li>
+        <li><strong>Phone:</strong> {{ personalInfo.phone }}</li>
+        <li><strong>Address:</strong> {{ personalInfo.address }}</li>
+    </ul>
+    </div>
+</div>
+</section>
