--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,1 +1,17 @@
-<p>experience works!</p>
+<section class="experience my-5">
+    <h2 class="text-center">Experience & Education</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Experience</h3>
+            <ul>
+                <li *ngFor="let exp of experience">{{ exp.title }} - {{ exp.company }} ({{ exp.duration }})</li>
+              </ul>
+        </div>
+        <div class="col-md-6">
+            <h3>Education</h3>
+            <ul>
+                <li *ngFor="let edu of education">{{ edu.degree }} - {{ edu.school }} ({{ edu.year }})</li>
+              </ul>
+        </div>
+    </div>
+</section>
