--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,1 +1,11 @@
-<p>skills works!</p>
+<section class="skills my-5">
+    <h2 class="text-center">Skills</h2>
+    <div class="row" *ngFor="let skill of skills">
+      <h4>{{ skill.name }}</h4>
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" [style.width]="skill.level + '%'">
+          {{ skill.level }}%
+        </div>
+      </div>
+    </div>
+  </section>
